# oidc_pure

./: .env.example  .gitignore  BUILD_CHECKLIST.md  CHANGELOG.md  DEPLOY_v1.1.4.md  LICENSE  Makefile  README.md  SECURITY.md  build_package.sh  oidc_config.py  pre-release-check.sh  publish_to_pypi.sh  pyproject.toml  pytest.ini  release.sh  security_audit.sh  test_manual.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: RELEASE_CHECKLIST.md  SETUP_COMPLETE.md  TRUSTED_PUBLISHING.md  WORKFLOWS_GUIDE.md
.github/workflows/: ci.yml  release-publish.yml  security.yml
examples/: async_example.py  django_drf_integration.py  django_integration.py  fastapi_integration.py  flask_integration.py  keycloak_example.py  simple_example.py
oidc_pure/: __init__.py  client.py  discovery.py  exceptions.py  models.py  oauth2.py  tokens.py
tests/: __init__.py  conftest.py  test_client.py  test_discovery.py  test_integration.py  test_models.py  test_multi_provider.py  test_oauth2.py  test_tokens.py
